- fix navigation on mobile - fix mav actions activation - add favicon - fix social media icon

--- a/default-theme/sass/base/_layout.scss
+++ b/default-theme/sass/base/_layout.scss
@@ -13,22 +13,33 @@ body {
     opacity: 0;
     position: relative;
     overflow-x: hidden;
-    @include transition-property(transform);
-    @include transition-duration(.35s);
-    @include transition-timing-function(cubic-bezier(0.230, 1.000, 0.320, 1.000));
 }
 
 body.js-menu-opened {
     overflow-y: hidden;
-    @include transform(translate3d(-100%, 0,0));
 
-    @include susy-breakpoint($medium-screen){
-        @include transform(translate3d(-20%, 0,0));
+    .nav-main {
+        @include transform(translate3d(0,0,0));
+    }
+    main,
+    .footer {
+        @include transform(translate3d(-100%, 0,0));
+
+        @include susy-breakpoint($medium-screen){
+            @include transform(translate3d(-20%, 0,0));
+        }
+    }
+
+    .u-fixed:not(.nav-main){
+        @include transition(opacity .15s);
+        opacity: 0 !important;
     }
 }
 
-.header--main,
+.nav-main,
 main,
 .footer {
-
+    @include transition-property(transform);
+    @include transition-duration(.35s);
+    @include transition-timing-function(cubic-bezier(0.230, 1.000, 0.320, 1.000));
 }
